--- a/style/header.css
+++ b/style/header.css
@@ -1,41 +1,189 @@
+.header__section {
+  padding-top: 27px;
+  padding-bottom: 90px;
+}
+
+.sales {
+  background-color: #fff;
+}
+
 .header__box {
   width: initial;
   display: grid;
-  grid-template-columns: 17.68% 14.12% 48.25% 20%;
+  grid-template-columns: auto auto auto auto;
   grid-template-rows: 61px;
 
   grid-template-areas: 
     "logo menu search icons";
 }
 
+.header__elem {
+  align-self: center;
+}
+
+.header__elem_1 p {
+  display: inline-block;
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 30px;
+  letter-spacing: 0.06em;
+  color: var(--3);
+}
+
+.header__elem_1 span {
+  display: inline-block;
+  font-family: var(--second-family);
+  font-weight: 700;
+  font-size: 30px;
+  letter-spacing: 0.06em;
+  color: var(--2);
+}
+
 .header__elem:nth-child(1) {
   grid-area: logo;
-  background-color: red;
-  margin-right: 123px;
 }
 
 .header__elem:nth-child(2) {
   grid-area: menu;
-  background-color: blue;
-  margin-right: 99px;
 }
 
 .header__elem:nth-child(3) {
   grid-area: search;
-  background-color: yellow;
-  margin-right: 97px;
 }
 
 .header__elem:nth-child(4) {
   grid-area: icons;
-  background-color: green;
 }
 
-.header__elem {
+.header__elem_2__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 10px;
+  width: 151px;
+  height: 54px;
+  background: var(--2);
+
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 150%;
   color: var(--1);
-  text-align: center;
 }
 
-.header__elem::after {
-  content: "test";
+.header__elem_2__button::before {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 12px;
+  background-image: url(../img/Vector.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  margin-right: 10px;
+  margin-left: 2px;
+}
+
+.header__elem_3 {
+  position: relative;
+  width: 757px;
+  height: 54px;
+}
+
+.header__elem_3__input {
+  width: 757px;
+  height: 54px;
+  border-radius: 30px;
+  background: #efefef;
+  border: none;
+  outline: none;
+  padding-left: 40px;
+  padding-top: 15px;
+  padding-bottom: 18px;
+  padding-right: 105px;
+
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 130%;
+  color: var(--4);
+}
+
+.header__elem_3__button {
+  position: absolute;
+  width: 101px;
+  height: 54px;
+  border-radius: 30px;
+  background: var(--2);
+  right: 0;
+  top: 0;
+}
+
+.header__elem_3__button::before {
+  content: "";
+  display: inline-block;
+  width: 26.24px;
+  height: 26.24px;
+  background-image: url(../img/search.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.header__elem_4__ul {
+  display: flex;
+  gap: 70px; 
+  align-items: end;
+}
+
+.header__elem_4__li-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header__elem_4__li-item__img_1 {
+  margin-bottom: 10px;
+}
+
+.header__elem_4__li-item__img_2 {
+  margin-bottom: 7px;
+}
+
+.header__elem_4__li-item_2 {
+  position: relative;
+}
+
+.header__elem_4__li-item__img_3 {
+  margin-bottom: 7.97px;
+}
+
+.header__elem_4__li-item__text {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 130%;
+  color: var(--3);
+}
+
+.header__elem_4__li-item__img_2__circle {
+  position: absolute;
+  right: 14px;
+  top: -3.5px;
+  width: 14px;
+  height: 14px;
+  border-radius: 100%;
+  background-color: var(--1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__elem_4__li-item__img_2__count {
+  z-index: 1;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 130%;
+  color: var(--2);
 }
