--- a/style/global.css
+++ b/style/global.css
@@ -93,3 +93,44 @@ iframe {
   position: fixed;
   transform: scale(0);
 }
+@media (max-width: 1024px) {
+  .container {
+    padding: 0 34px;
+  }
+
+  .section {
+    padding: 30px 0px 90px;
+  }
+
+  .section:last-child {
+    padding-bottom: 106px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 0 34px;
+  }
+
+  .section {
+    padding: 25px 0px 90px;
+  }
+
+  .section:last-child {
+    padding-bottom: 580px;
+  }
+}
+
+@media (max-width: 320px) {
+  .container {
+    padding: 0 20px;
+  }
+
+  .section {
+    padding: 20px 0px 90px;
+  }
+
+  .section:last-child {
+    padding-bottom: 234px;
+  }
+}
