--- a/style/header.css
+++ b/style/header.css
@@ -169,14 +169,20 @@
 
 .header__elem_4__li-item__img_1 {
   margin-bottom: 10px;
+  width: 24px;
+  height: 24px;
 }
 
 .header__elem_4__li-item__img_2 {
   margin-bottom: 7px;
+  width: 30px;
+  height: 30px;
 }
 
 .header__elem_4__li-item__img_3 {
   margin-bottom: 7.97px;
+  width: 30px;
+  height: 27.53px;
 }
 
 .header__elem_4__li-item__text {
@@ -207,4 +213,270 @@
   font-size: 14px;
   line-height: 130%;
   color: var(--2);
+}
+
+@media (max-width: 1024px) {
+  .header__section {
+    padding-top: 34px;
+    padding-bottom: 30px;
+  }
+
+  .header__box {
+    display: grid;
+    grid-template-columns: 240px 406px 294px;
+    grid-template-rows: 61px 54px;
+    row-gap: 44px;
+  
+    grid-template-areas: 
+      "logo . icons"
+      "menu search search";
+  }
+
+  .header__elem_4__ul {
+    gap: 40px;
+  }
+
+  .header__elem_3 {
+    width: 700px;
+  }
+  
+  .header__elem_3__input {
+    width: 700px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header__section {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .header__box {
+    display: grid;
+    grid-template-columns: 160px 6px 313px 221px;
+    grid-template-rows: 44px 42px;
+    row-gap: 29px;
+  
+    grid-template-areas: 
+      "logo logo . icons"
+      "menu search search search";
+  }
+  
+  .header__elem_1 p {
+    font-size: 26px;
+  }
+  
+  .header__elem_1 span {
+    font-size: 26px;
+  }
+
+  .header__elem_4__ul {
+    gap: 30px;
+  }
+  
+  .header__elem_4__li-item_1 {
+    width: 52px;
+    height: 39px;
+  }
+  
+  .header__elem_4__li-item_2 {
+    width: 47px;
+    height: 41.5px;
+  }
+  
+  .header__elem_4__li-item_3 {
+    width: 62px;
+    height: 40.25px;
+  }
+  
+  .header__elem_4__li-item__img_1 {
+    margin-bottom: 3px;
+    width: 20px;
+  }
+  
+  .header__elem_4__li-item__img_2 {
+    margin-bottom: 0.5px;
+    width: 25px;
+  }
+  
+  .header__elem_4__li-item__img_3 {
+    margin-bottom: 1.31px;
+    width: 25px;
+    height: 22.94px;
+  }
+  
+  .header__elem_4__li-item__text {
+    font-size: 12px;
+  }
+  
+  .header__elem_4__li-item__img_2__circle {
+    right: 7px;
+  }
+
+  .header__elem_2__button {
+    border-radius: 6px;
+    width: 115px;
+    height: 42px;
+    font-size: 16px;
+  }
+  
+  .header__elem_2__button::before {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 12px;
+    background-image: url(../img/Vector.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+  
+    margin-right: 7px;
+    margin-left: 1.5px;
+  }
+
+  .header__elem_3 {
+    width: 540px;
+    height: 42px;
+  }
+  
+  .header__elem_3__input {
+    width: 540px;
+    height: 42px;
+    padding-left: 30px;
+    padding-top: 11px;
+    padding-bottom: 15px;
+    font-size: 12px;
+  }
+  
+  .header__elem_3__input::placeholder {
+    font-size: 12px;
+  }
+  
+  .header__elem_3__button {
+    width: 82px;
+    height: 42px;
+  }
+  
+  .header__elem_3__button::before {
+    width: 21.86px;
+    height: 21.86px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header__section {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .header__box {
+    display: grid;
+    grid-template-columns: 150px 130px;
+    grid-template-rows: 25px 30px 30px;
+    row-gap: 20px;
+  
+    grid-template-areas: 
+      "logo ."
+      "menu icons"
+      "search search";
+  }
+  
+  .header__elem_1 p {
+    font-size: 18px;
+  }
+  
+  .header__elem_1 span {
+    font-size: 18px;
+  }
+
+  .header__elem_4__ul {
+    gap: 20px;
+  }
+
+  .header__elem_4__li-item {
+    justify-content: center;
+  }
+  
+  .header__elem_4__li-item_1 {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .header__elem_4__li-item_2 {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .header__elem_4__li-item_3 {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .header__elem_4__li-item__img_1 {
+    margin-bottom: 0;
+    width: 20px;
+    height: 20px;
+  }
+  
+  .header__elem_4__li-item__img_2 {
+    margin-bottom: 0;
+    width: 25px;
+    height: 25px;
+  }
+  
+  .header__elem_4__li-item__img_3 {
+    margin-bottom: 0;
+    width: 25px;
+    height: 22.94px;
+  }
+  
+  .header__elem_4__li-item__text {
+    display: none;
+  }
+  
+  .header__elem_4__li-item__img_2__circle {
+    right: 0px;
+    top: -1.5px;
+  }
+
+  .header__elem_2__button {
+    border-radius: 4px;
+    width: 79px;
+    height: 30px;
+    font-size: 12px;
+  }
+  
+  .header__elem_2__button::before {
+    width: 10.5px;
+    height: 7px;
+    margin-right: 3.75px;
+    margin-left: 1.5px;
+  }
+
+  .header__elem_3 {
+    width: 280px;
+    height: 30px;
+  }
+  
+  .header__elem_3__input {
+    width: 280px;
+    height: 30px;
+    padding-left: 16px;
+    padding-top: 9px;
+    padding-bottom: 11px;
+    font-size: 8px;
+  }
+  
+  .header__elem_3__input::placeholder {
+    font-size: 8px;
+  }
+  
+  .header__elem_3__button {
+    width: 50px;
+    height: 30px;
+  }
+  
+  .header__elem_3__button::before {
+    width: 14.58px;
+    height: 14.58px;
+  }
 }
