--- a/style/global.css
+++ b/style/global.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
 
   position: relative;
   overflow-x: hidden;
